--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -44,9 +44,9 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="/topic">
               <span data-feather="shopping-cart"></span>
-              Devices
+              Topics
             </a>
           </li>
           <li class="nav-item">
