--- a/frontend/src/app/topics/topics.component.html
+++ b/frontend/src/app/topics/topics.component.html
@@ -1,20 +1,22 @@
-<div class="mat-elevation-z8 w-100">
-    <table mat-table [dataSource]="dataSource">
-        <!-- Position Column -->
-        <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef> Id </th>
-            <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-        </ng-container>
+<div class="wrapper-table">
+    <div class="mat-elevation-z8 w-100">
+        <table mat-table [dataSource]="dataSource">
+            <!-- Position Column -->
+            <ng-container matColumnDef="id">
+                <th mat-header-cell *matHeaderCellDef> Id</th>
+                <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+            </ng-container>
 
-        <!-- Name Column -->
-        <ng-container matColumnDef="topic">
-            <th mat-header-cell *matHeaderCellDef> Topic </th>
-            <td mat-cell *matCellDef="let element"> {{element.topic}} </td>
-        </ng-container>
+            <!-- Name Column -->
+            <ng-container matColumnDef="topic">
+                <th mat-header-cell *matHeaderCellDef> Topic</th>
+                <td mat-cell *matCellDef="let element"> {{element.topic}} </td>
+            </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
 
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+    </div>
 </div>
