--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -14,6 +14,8 @@
         </div>
     </div>
 
+   {{temperature}}
+    {{humidity}}
 
     <h2>Section title</h2>
     <div class="table-responsive">
