--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -38,15 +38,15 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/mqtt">
+            <a class="nav-link" href="/source">
               <span data-feather="file"></span>
-              MQTT
+              Source Manage
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/topic">
               <span data-feather="shopping-cart"></span>
-              Topics
+              List Sources
             </a>
           </li>
           <li class="nav-item">
@@ -63,26 +63,7 @@
           </li>
         </ul>
 
-        <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
-          <span>Saved reports</span>
-          <a class="link-secondary" href="#" aria-label="Add a new report">
-            <span data-feather="plus-circle"></span>
-          </a>
-        </h6>
-        <ul class="nav flex-column mb-2">
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="file-text"></span>
-              Current month
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="file-text"></span>
-              Last quarter
-            </a>
-          </li>
-        </ul>
+
       </div>
     </nav>
 
